--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Play Music</string>
 
     <string name="playing">Playing</string>
+    <string name="unknown">Unknown</string>
 </resources>
