Correcciones de errores

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -2,4 +2,7 @@
 <resources>
     <string name="app_name">Reproductor</string>
     <string name="playing">Reproduciendo</string>
+    <string name="end">Salir</string>
+    <string name="shuffle">Aleatorio</string>
+    <string name="unknown">Desconocido</string>
 </resources>
