--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="playing">Playing</string>
     <string name="unknown">Unknown</string>
+    <string name="shuffle">Shuffle</string>
+    <string name="end">End</string>
 </resources>
